<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_scan_info"
        android:icon="@drawable/button_info"
        android:orderInCategory="101"
        android:showAsAction="always"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_scan_more"
        android:icon="@drawable/button_overflow"
        android:orderInCategory="102"
        android:showAsAction="always"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/action_scan_enter_barcode"
                android:title="@string/title_actionbar_enter_barcode"/>
            <item
                android:id="@+id/action_scan_change_driver"
                android:title="@string/title_actionbar_change_driver"/>
        </menu>
    </item>

</menu>