<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MyDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/ab_solid_mrdstyle"
        android:padding="0dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:text="@string/trafficDelay_title"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:gravity="right" >

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/seperator_grey" />

            <ImageButton
                android:id="@+id/button_trafficDelay_closeButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:background="@null"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:src="@drawable/icon_cancel_unselected" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_trafficDelay_5min"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_light_grey"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/trafficDelay_5min" />

    <View
        android:id="@+id/seperator_trafficDelay_nextDelivery"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/seperator_grey" />
    
    <Button
        android:id="@+id/button_trafficDelay_10min"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_light_grey"
        android:gravity="left|center_vertical"
        android:paddingLeft="20dp"
        android:text="@string/trafficDelay_10min" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/seperator_grey" />

    <Button
        android:id="@+id/button_trafficDelay_20min"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_light_grey"
        android:gravity="left|center_vertical"
        android:paddingLeft="21dp"
        android:text="@string/trafficDelay_20min" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/seperator_grey" />
    
    <Button
        android:id="@+id/button_trafficDelay_30min"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_light_grey"
        android:gravity="left|center_vertical"
        android:paddingLeft="21dp"
        android:text="@string/trafficDelay_30min" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/seperator_grey" />
    
    <Button
        android:id="@+id/button_trafficDelay_1hour"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:background="@drawable/button_light_grey"
        android:gravity="left|center_vertical"
        android:paddingLeft="21dp"
        android:text="@string/trafficDelay_1hour" />

</LinearLayout>