<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colour_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreatePinActivity" >

    <RelativeLayout
        android:id="@+id/toast_create_pin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/toast_red"
        android:paddingBottom="@dimen/margin_standard"
        android:paddingTop="@dimen/margin_standard"
        android:visibility="invisible" >

        <TextView
            android:id="@+id/textView_create_pin_toast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginRight="@dimen/margin_standard"
            android:gravity="center"
            android:maxLines="2"
            android:text="@string/text_create_pin_toast_too_short"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView_enter_pin_driver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toast_create_pin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_pin_text_N"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_pin_text_N"
        android:text="@string/text_create_pin"
        android:textColor="@color/colour_text_darkergrey"
        android:textSize="@dimen/font_size_fragment_title" />

    <EditText
        android:id="@+id/editText_create_pin_1"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_pin"
        android:layout_below="@+id/textView_enter_pin_driver"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:background="@color/colour_white"
        android:ems="10"
        android:hint="@string/text_create_pin_enter"
        android:inputType="numberPassword"
        android:paddingLeft="@dimen/margin_pin_left" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_create_pin_2"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/height_pin"
        android:layout_below="@+id/editText_create_pin_1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_pin_text_N"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_pin_text_N"
        android:background="@color/colour_white"
        android:ems="10"
        android:hint="@string/text_craete_pin_confirm"
        android:inputType="numberPassword"
        android:paddingLeft="@dimen/margin_pin_left" />

    <Button
        android:id="@+id/button_create_pin_create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_create_pin_2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:background="@drawable/button_custom_grey"
        android:text="@string/button_create"
        android:textColor="@color/colour_button_greyed"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_create_pin_change_driver"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/margin_standard"
        android:layout_marginRight="@dimen/margin_standard"
        android:background="@drawable/button_custom_grey"
        android:text="@string/button_change_driver"
        android:textStyle="bold" />

</RelativeLayout>
