<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin" >

    <RelativeLayout
        android:id="@+id/incomplete_scan_title_FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners" >
        
    <LinearLayout
        android:id="@+id/incomplete_scan_title_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ab_background_textured_mrdstyle" >

        <TextView
            android:id="@+id/textView_manAuth_manager_name"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/text_incomplete_scan_title"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/incomplete_scan_message_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/incomplete_scan_title_linearLayout"
        android:background="@color/colour_lightgrey" >

        <TextView
            android:id="@+id/textView_manAuth_enter_pin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="left"
            android:text="@string/text_incomplete_scan_message"
            android:textColor="@color/colour_text_darkgrey"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/incomplete_scan_buttons_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/incomplete_scan_message_linearLayout"
        android:background="@color/colour_lightgrey"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button_incomplete_scan_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom_grey"
            android:text="@string/button_incomplete_scan_scan" />

        <Button
            android:id="@+id/button_incomplete_scan_continue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom_grey"
            android:text="@string/button_incomplete_scan_continue" />

    </LinearLayout>
</RelativeLayout>
</RelativeLayout>