<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_activity_grey" >
    
    <Button
        android:id="@+id/button_home_manager_auth_new_delivery_run"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/button_custom"
        android:paddingBottom="@dimen/button_padding_topbottom"
        android:paddingTop="@dimen/button_padding_topbottom"
        android:text="@string/button_auth_new_delivery_run"
        android:textSize="@dimen/font_size_button" />
    
    <Button
        android:id="@+id/button_home_manager_milkrun"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/button_custom"
        android:paddingBottom="@dimen/button_padding_topbottom"
        android:paddingTop="@dimen/button_padding_topbottom"
        android:text="@string/button_start_new_milkrun"
        android:textSize="@dimen/font_size_button" />
    
    <Button
        android:id="@+id/button_home_manager_training"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/button_custom_grey"
        android:paddingBottom="@dimen/button_padding_topbottom"
        android:paddingTop="@dimen/button_padding_topbottom"
        android:text="@string/button_start_trainingrun"
        android:textSize="@dimen/font_size_button" />

</LinearLayout>
